[gd_scene load_steps=15 format=3 uid="uid://d3w3kyos2h4mi"]

[ext_resource type="Texture2D" uid="uid://cum5khv3jtce1" path="res://assets/ground.png" id="1_ab0rb"]
[ext_resource type="Texture2D" uid="uid://d38ceuoo614k4" path="res://assets/bg.png" id="1_biqsy"]
[ext_resource type="Script" path="res://main.gd" id="1_gk4ys"]
[ext_resource type="Texture2D" uid="uid://dfuofh4nwer0n" path="res://assets/bird1.png" id="2_7nw76"]
[ext_resource type="Texture2D" uid="uid://533ubvnyvpxe" path="res://assets/bird2.png" id="3_h5bxo"]
[ext_resource type="Script" path="res://CharacterBody2D.gd" id="3_y43py"]
[ext_resource type="Texture2D" uid="uid://cb3fw6j2c364v" path="res://assets/bird3.png" id="4_y43m8"]
[ext_resource type="Script" path="res://Ground.gd" id="5_pmjo5"]
[ext_resource type="Script" path="res://Pipes.gd" id="8_hb84g"]
[ext_resource type="Texture2D" uid="uid://den4sx3n8oo4t" path="res://assets/pipe.png" id="9_wd01h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eqm2j"]
size = Vector2(72, 558.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fk7rf"]
size = Vector2(1154, 91)

[sub_resource type="SpriteFrames" id="SpriteFrames_q6lko"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7nw76")
}, {
"duration": 1.0,
"texture": ExtResource("3_h5bxo")
}, {
"duration": 1.0,
"texture": ExtResource("4_y43m8")
}, {
"duration": 1.0,
"texture": ExtResource("3_h5bxo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w1810"]
radius = 20.0
height = 40.0

[node name="Main" type="Node"]
script = ExtResource("1_gk4ys")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(403, 335)
texture = ExtResource("1_biqsy")

[node name="Pipes" type="Node2D" parent="."]
script = ExtResource("8_hb84g")

[node name="UpperPipe" type="Area2D" parent="Pipes"]
position = Vector2(1059, -94)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pipes/UpperPipe"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_eqm2j")

[node name="Sprite2D" type="Sprite2D" parent="Pipes/UpperPipe"]
texture = ExtResource("9_wd01h")
flip_v = true

[node name="LowerPipe" type="Area2D" parent="Pipes"]
position = Vector2(1059.09, 607)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pipes/LowerPipe"]
position = Vector2(0, 2.25)
shape = SubResource("RectangleShape2D_eqm2j")

[node name="Sprite2D" type="Sprite2D" parent="Pipes/LowerPipe"]
texture = ExtResource("9_wd01h")

[node name="Ground" type="Area2D" parent="."]
position = Vector2(536, 651)
script = ExtResource("5_pmjo5")

[node name="Sprite2D" type="Sprite2D" parent="Ground"]
texture = ExtResource("1_ab0rb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(43, -35.5)
shape = SubResource("RectangleShape2D_fk7rf")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(128, 77)
motion_mode = 1
script = ExtResource("3_y43py")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(-0.5, 0)
sprite_frames = SubResource("SpriteFrames_q6lko")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-0.5, 0)
shape = SubResource("CapsuleShape2D_w1810")

[connection signal="body_entered" from="Pipes/UpperPipe" to="CharacterBody2D" method="_on_upper_pipe_body_entered"]
[connection signal="body_entered" from="Pipes/LowerPipe" to="CharacterBody2D" method="_on_lower_pipe_body_entered"]
[connection signal="body_entered" from="Ground" to="CharacterBody2D" method="_on_ground_body_entered"]
